Update the description of RAG_App file.

--- a/RAG_App.ipynb
+++ b/RAG_App.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "21baec67",
+   "metadata": {},
+   "source": [
+    "# RAG-Based App For Analyzing Legal Documents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3e51f884",
    "metadata": {},
    "source": [
-    "This notebook contains the program for analyzing the legal documents using **Pinecone**, **OpenAI** and **LangChain**.\n",
+    "This notebook creates a Retrieval Augmented Generation (RAG)application for analyzing the legal documents using **Pinecone**, **OpenAI** and **LangChain**. Through this RAG implementation, we can use ChatGPT to analyze out proprietary data.\n",
     "\n",
     "The PDF document containing the excerpts of the deposition is placed in the **Documents** directory. We use the **PyPDFLoader** API from **LangChain** to read the document. Then, we split the large document into smaller chunks.\n",
     "\n",
